Fixed CSS Settings Panel Covering Settings (#296)
* Fixed CSS Settings Panel Covering Settings

--- a/extension/settings/side-menu.css
+++ b/extension/settings/side-menu.css
@@ -241,7 +241,7 @@ Hides the menu at `48em`, but modify this based on your app's needs
   }
 }
 
-@media (max-width: 48em) {
+@media (max-width: 1300px) {
   /* Only apply this when the window is small. Otherwise, the following
      case results in extra padding on the left:
          * Make the window small
@@ -251,6 +251,6 @@ Hides the menu at `48em`, but modify this based on your app's needs
 
   #layout.active {
     position: relative;
-    left: 150px;
+    margin-left: 150px;
   }
 }
